# playground-py

./: .gitignore  Makefile  README.md  pyproject.toml  ruff.toml
notebook-collection/: instructor-sentiment.ipynb  langextract-ner.ipynb  langextract-sentiment.ipynb  langextract.ipynb  ndcg.ipynb  ollama-ocr.ipynb  openrouter.ipynb  outlines-sentiment.ipynb  pyproject.toml
notebook-collection/datasets/: source.md
src/playground/: __init__.py
src/playground/collections/: __init__.py  linkedmap.py
src/playground/loading/: __init__.py  loading.py
src/tests/: test_init_version.py
src/tests/collections/: test_linkedmap.py
src/tests/loading/: test_loading.py
torch-intro/: .gitignore  01_quickstart.ipynb  02_tensor.ipynb  03_dataset.ipynb  05_buildmodel.ipynb  README.md  pyproject.toml
torch-intro/a-60-minutes-blitz/: 01_tensor.ipynb  02_autograd.ipynb  03_neural_networks.ipynb  04_classifier.ipynb  05_data_parallel.ipynb
torch-intro/getting-started/: 04_transforms.ipynb  06_autograd.ipynb  07_optimization.ipynb  08_saveloadrun.ipynb
workout/: 01_guessing_game.py  02_mysum.py  03_run_timing.py  04_hex_output.py  05_pig_latin.py  06_pig_latin_sentence.py  07_ubbi_dubbi.py  08_strsort.py  09_firstlast.py  10_mysum2.py  11_alphabetize_countries.py  12_repeating_word.py  13_printing_tuple.py  14_restaurant.py  15_rainfall.py  16_dictdiff.py  17_different_number.py  18_final_line.py  19_paswd_to_dict.py  20_wordcount.py  21_longest_word.py  22_csv.py  23_json.py  24_reverse_lines.py  25_xml_generator.py  26_prefix_calculator.py  27_password_generator.py  28_join_numbers.py  29_add_numbers.py  30_flatten.py  31_pig_latin_file.py  32_flip_dict.py  33_transform_values.py  34_supervocalic_words.py  35_gematria.py  36_sales_tax.py  37_main_menu.py  38_scoop.py  39_bowl_scoop.py  40_bowl_limits.py  (+13 more)
