[project]
name = "playground"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
playground = "playground:main"

[dependency-groups]
dev = [
  "coverage>=7.13.1",
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",
]

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"

[tool.pyright]
venvPath = "."
venv = ".venv"
extraPaths = []

[tool.ruff]
line-length = 80
extend-include = ["*.ipynb"]
exclude = [".venv", ".git", "build", "dist"]

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false

[tool.uv.workspace]
members = [
  "notebook-collection",
]
