[project]
name = "notebook-collection"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "instructor>=1.14.1",
  "jupyter>=1.1.1",
  "langextract>=1.1.1",
  "langextract-llamacpp>=0.1.2",
  "numba>=0.63.1",
  "ollama>=0.6.1",
  "openai>=2.15.0",
  "outlines>=1.2.9",
  "polars>=1.37.1",
  "pydantic>=2.12.5",
]
