[project]
name = "notebook-collection"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "instructor>=1.14.5",
  "jupyter>=1.1.1",
  "langextract>=1.1.1",
  "langextract-llamacpp>=0.1.2",
  "numba>=0.64.0",
  "ollama>=0.6.1",
  "openai>=2.28.0",
  "outlines>=1.2.12",
  "polars>=1.39.0",
  "pydantic>=2.12.5",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
